[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Tower/Projectiles/MissileProjectile.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Towers/Missile_Projectile.png" type="Texture" id=2]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ProjectileArea" type="Area2D" parent="."]
scale = Vector2( 0.4, 0.4 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileArea"]

[node name="Missile Projectile" type="Sprite" parent="."]
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Missile Projectile"]

[node name="Contact Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Contact Area"]

[connection signal="area_entered" from="ProjectileArea" to="." method="_on_ProjectileArea_area_entered"]
[connection signal="area_exited" from="ProjectileArea" to="." method="_on_ProjectileArea_area_exited"]
[connection signal="area_entered" from="Contact Area" to="." method="_on_Contact_Area_area_entered"]
[connection signal="area_exited" from="Contact Area" to="." method="_on_Contact_Area_area_exited"]
